# sdh-jsondoc

./: .hgignore  CHANGELOG.txt  LICENSE.txt  README.rst  pyproject.toml  setup.py
src/sdh/jsondoc/: decoder.py  encoder.py  handler.py  manager.py
src/ua2/jsondoc/: __init__.py  decoder.py  encoder.py  handler.py  manager.py
